# lmdb

./: .gitignore  CMakeLists.txt  Jamfile.jam  LMDB.CLR.sln  LMDB.CLR.sln.DotSettings  README  README.md  Readme.md  cross-arm-linux-gnueabihf.cmake  info.txt  install.vcxproj  lmdb.props  lmdb.sln  lmdb.vcxproj  lmdb.vcxproj.filters  makedef.cmd  mdb_uwp_patch.diff  vlx.cmake
.github/workflows/: cmake.yml
include-fwd/lmdb/: lmdb.h  midl.h
include/ac/: socket.h
libraries/: lmdb.sln  premake5.lua
libraries/liblmdb/: .gitignore  CHANGES  CMakeLists.txt  Doxyfile  Makefile  TODO  chacha8.h  intro.doc  intro.md  liblmdb.def  lmdb.h  lmdb_demo.c  lmdb_method.c  lmdb_method.h  mdb.c  mdb_copy.c  mdb_drop.c  mdb_dump.1  mdb_dump.c  mdb_from_db.c  mdb_load.1  mdb_load.c  mdb_stat.1  mdb_stat.c  meson.build  midl.c  midl.h  module.h  moz-test.c  mtest.c  mtest2.c  mtest3.c  mtest4.c  mtest5.c  mtest6.c  mtest7.c  rzdb.c  rzdb.h  rzdb_copy.c  rzdb_drop.c  (+13 more)
libraries/msbuild/: lmdb-standalone.vcxproj  lmdb-standalone.vcxproj.filters  lmdb-static-standalone.vcxproj  lmdb-static.vcxproj  lmdb-static.vcxproj.filters  lmdb.vcxproj
lmdb/: lmdb.sln
lmdb/lmdb/: lmdb.vcxproj  lmdb.vcxproj.filters
mgr/: commit_log.c  daemonize.c  dbapi.c  dbus.c  skipd.c  skipd.h
myLmdb/: CMakeLists.txt  main.cpp  makeFileList.py
myLmdb/testdb/: data.mdb  lock.mdb
src/LMDB.CLR/: ConstPtr.cs  Headers.cs  LineAttribute.cs  Midl.cs  Ptr.cs  Ptrs.cs
tests/: mmap_test.c  sqlite3_blob.c  sqlite_blob2.c  sqlite_test2.c  test.c
